# GuoMuoRuoProject

./: .gitignore  README.md  SpearofTanaka.pro  bible.txt  harusoftPublic.pem  main.cpp  openingwords.txt  test.pro  xyz.harusoft.CFClient.desktop
Client/: Client.pro  dtlsassociation.cpp  dtlsassociation.h  dtlsclient.cpp  dtlsclient.h  main.cpp
CyberFleet/: CMakeLists.txt  CyberFleet.pro  common.qrc  harusoft.pem  openingwords.txt  steam_appid.txt
CyberFleet/Client/: Client.pro  client.cpp  client.h  main.cpp  networkerror.cpp
CyberFleet/ClientGUI/: ClientGUI.pro  clientv2.cpp  clientv2.h  developwindow.cpp  equipicon.cpp  equipicon.h  equipmodel.cpp  equipmodel.h  factoryarea.cpp  factoryarea.h  factoryarea.ui  keyenterreceiver.cpp  keyenterreceiver.h  licensearea.cpp  licensearea.h  licensearea.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  portarea.h  portarea.ui  steamauth.cpp  steamauth.h
CyberFleet/ClientGUI/ui/: developwindow.cpp  developwindow.h  developwindow.ui  equipview.cpp  equipview.h  equipview.ui  factoryarea.cpp  factoryarea.h  factoryarea.ui  licensearea.cpp  licensearea.h  licensearea.ui  loginscreen - 副本.ui  loginscreen.h  loginscreen.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  maprender.cpp  maprender.h  mapviewwidget.h  navigator.cpp  navigator.h  newlogins.cpp  newlogins.h  newlogins.ui  portarea.cpp  portarea.h  portarea.ui  sortie.cpp  sortie.h  techview.cpp  techview.h  techview.ui
CyberFleet/FactorySlot/: CMakeLists.txt  FactorySlot.pro  factoryslot.cpp  factoryslot.h  factoryslot.pri  factoryslotplugin.cpp
CyberFleet/Protocol/: Protocol.pro  commandline.cpp  commandline.h  consoletextstream.cpp  consoletextstream.h  equipment.cpp  equipment.h  equiptype.cpp  equiptype.h  kp.cpp  kp.h  map.h  mapwithdiff.h  peerinfo.h  receiver.cpp  receiver.h  resord.cpp  resord.h  sender.cpp  sender.h  ship.cpp  ship.h  shiptype.cpp  shiptype.h  tech.cpp  tech.h  utility.cpp  utility.h
CyberFleet/QConsoleListener/: qconsolelistener.cpp  qconsolelistener.h
CyberFleet/QConsoleListener/src/: qconsolelistener.cpp  qconsolelistener.h
CyberFleet/Server/: Server.pro  erfinv.h  kerrors.h  main.cpp  qconsolelistener.cpp  qconsolelistener.h  rngesus.h  rnjesus.h  server.cpp  server.h  servermastersender.cpp  servermastersender.h  sslserver.cpp  sslserver.h  tech.cpp  tech.h  user.cpp  user.h
CyberFleet/Translations/: CyberFleet2_en_US.ts  CyberFleet2_en_US_copy.ts  CyberFleet2_ja_JP.ts  CyberFleet2_protocol_en_US.ts  CyberFleet2_protocol_ja_JP.ts  CyberFleet2_protocol_zh_CN.ts  CyberFleet2_server_en_US.ts  CyberFleet2_server_ja_JP.ts  CyberFleet2_server_zh_CN.ts  CyberFleet2_zh_CN.ts  WA2_en_US.ts  WA2_zh_CN.ts
CyberFleet/resources/equiptype/: readme.md
CyberFleet/resources/resord/: al.xcf  explosive.xcf
CyberFleet/resources/shiptype/: BB.xcf  CA.xcf  DD.xcf  DE.xcf
FleetMemories/: CMakeLists.txt  common.qrc  openingwords.txt  tHtApu.json
FleetMemories/ClientGUI/: clientv2.cpp  clientv2.h  equipicon.cpp  equipicon.h  equipmodel.cpp  equipmodel.h  main.cpp  shipmodel.cpp  shipmodel.h  steamauth.cpp  steamauth.h
FleetMemories/FactorySlot/: factoryslot.cpp  factoryslot.h  factoryslotplugin.h
FleetMemories/Protocol/: Protocol.pro  commandline.cpp  commandline.h  ecma48.cpp  equipment.h  kp.cpp  kp.h  mapwithdiff.cpp  receiver.h  sender.cpp  sender.h  ship.cpp  ship.h  shipdynamic.cpp  shipdynamic.h  shiptype.cpp  shiptype.h  tech.cpp  utility.cpp
FleetMemories/Server/: main.cpp  qconsolelistener.cpp  rngesus.h  server.cpp  server.h  servermastersender.cpp  servermastersender.h  user.cpp  user.h
FleetMemories/Translations/: FleetMemories_en_US.ts  FleetMemories_ja_JP.ts  FleetMemories_zh_CN.ts
Magic/: Magic.pro  Magic_global.h  magic.cpp  magic.h
QConsoleListener/: QConsoleListener.pro  README.md  qconsolelistener.cpp  qconsolelistener.h
QConsoleListener/src/: qconsolelistener.cpp  qconsolelistener.h
STServer/: STServer.pro  consoletextstream.cpp  consoletextstream.h  dtlsserver.cpp  dtlsserver.h  ecma48.cpp  ecma48.h  main.cpp  qprint.cpp  qprint.h  run.cpp  run.h  wcwidth.cpp
Server/: Server.pro  dtlsserver.cpp  dtlsserver.h  main.cpp  messagehandler.cpp  messagehandler.h  run.cpp  run.h
Server2/: Server.pro  main.cpp
SslServer/: Zephyr  Zephyr.pub  default_ca.der  fortuneserver.pro  main.cpp  qsslserver.cpp  qsslserver.h  server.cpp  server.h
UI/: UI.pro  consolerun.cpp  consolerun.h  consoletextstream.cpp  consoletextstream.h  ecma48.cpp  ecma48.h  main.cpp  qprint.h  run.cpp  run.h  serverrun.cpp  serverrun.h  wcwidth.h
UIv2/: UIv2.pro  cli.cpp  cli.h  cliclient.cpp  cliclient.h  cliserver.cpp  cliserver.h  consoletextstream.cpp  consoletextstream.h  ecma48.cpp  ecma48.h  main.cpp  wcwidth.cpp
WrathofAdmiral2/: WrathofAdmiral2.pro  common.qrc  res_common.qrc
WrathofAdmiral2/Client/: Client.pro  Client_zh_CN.ts  client.cpp  client.h  main.cpp  networkerror.cpp  networkerror.h
WrathofAdmiral2/Protocol/: Protocol.pro  Protocol_zh_CN.ts  commandline.cpp  commandline.h  consoletextstream.cpp  consoletextstream.h  ecma48.h  equipment.cpp  equipment.h  kp.cpp  kp.h  protocol.cpp  protocol.h  resord.cpp  resord.h  wcwidth.c  wcwidth.cpp  wcwidth.h
WrathofAdmiral2/QConsoleListener/: QConsoleListener.pro  README.md  qconsolelistener.cpp
WrathofAdmiral2/Server/: Server.pro  Server_zh_CN.ts  kerrors.cpp  kerrors.h  main.cpp  peerinfo.cpp  server.cpp  server.h  sslserver.cpp  (+3 more)
config/: config.ini
console/: qprint.cpp  runner.cpp  runner.h
doc/: ECMA-48.txt  Equip.csv  Mechanics.xlsx  Ship.csv  Ship.xlsx  TODO.txt  Tech level.xlsx  ca.txt  deployment.txt  development.txt  equip_dev_chance.xlsx  equip_type.txt  equipattributedoc.md  equipshipattributes.md  guide.ods  oldinternalid.xlsx  oldssl.txt  settings.md  shipidexplanation.md  新建 文本文档.txt
logic/: stcommand.cpp  stcommand.h  stengine.cpp  stengine.h  strelations.cpp
nuclear_war/: GALOIS.md
old/: strelations.h
readme/: linux_venv_init.txt  venv_init.md
src_client/: main.py
src_common/: network_default.py  read_config.py
src_server/: main.py
(+270 files in other folders)
